i definitely remember how to html

--- a/website/index.html
+++ b/website/index.html
@@ -18,5 +18,7 @@
 <!--<meta property="og:image" content="" />-->
 </head>
 <html>
-    <title>notPearl</title>
+    <body>
+        <h1>notPearl</h1>
+    </body>
 </html>
