now with even more favicon

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" type="text/css" href="/stylesheet.css" />
 <meta name="description" content="Very wow" />
-<link rel="shortcut icon" href="/favicons/favicon.png" type="image/png" />
+<link rel="shortcut icon" href="/favicons/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <!--add when domain name is set up <link rel="canonical" href="" />-->
 <meta property="og:site_name" content="notPearl" />
 <meta property="og:type" content="website" />
