--- a/website/index.html
+++ b/website/index.html
@@ -44,11 +44,9 @@
         <a href="#">Resume</a>
     </div>
               
-    <!-- Use any element to open the sidenav -->
-    <span onclick="openNav()">open</span>
-              
     <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
     <div id="main">
         <h1>notPearl</h1>
+        <button onClick="openNav()"></button>
     </div>
 </html>
