mingjie lied to me

--- a/website/index.html
+++ b/website/index.html
@@ -45,7 +45,7 @@
     </div>
     
     <!--Invisible div that opens sideNav when a person hovers over where the sidenav should be -->
-    <div id="sidenavDetect" class="sidenavDetect" onHover="openNav()"></div>
+    <div id="sidenavDetect" class="sidenavDetect" onMouseOver="openNav()"></div>
         
     <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
     <div id="main">
